09_kubernetes/05_kong/kong-ingress-b.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-b
spec:
  rules:
  - host: app.b
    http:
      paths:
      - path: /
        backend:
          serviceName: appb
          servicePort: 5000
